-added readme to every supported microcontroller -renamed envs in .ini file for every microcontroller -organised folder structure for specific microcontrollers -added main readme -added LICENSE.txt -removed -e upload flag from .ini files

--- a/megaAVR/ATmega88P-ATmega88PA/platformio.ini
+++ b/megaAVR/ATmega88P-ATmega88PA/platformio.ini
@@ -8,14 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATtiny84]
-board_build.f_cpu = 8000000L
+[env:ATmega88P-ATmega88PA]
+board_build.f_cpu = 8000000UL
 platform = atmelavr
-board = ATtiny84
+board = ATmega88P
 upload_protocol = usbasp
-upload_flags = -e
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
 board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xFF
-board_fuses.efuse = 0xFF
+board_fuses.hfuse = 0xDF
+board_fuses.efuse = 0xF9
