--- a/tinyAVR/ATtiny13A/platformio.ini
+++ b/tinyAVR/ATtiny13A/platformio.ini
@@ -8,14 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATmega88P]
-board_build.f_cpu = 8000000UL
+[env:ATtiny13A]
+board_build.f_cpu = 9600000L
 platform = atmelavr
-board = ATmega88P
+board = ATtiny13A
 upload_protocol = usbasp
-upload_flags = -e
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
-board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xDF
-board_fuses.efuse = 0xF9
+board_fuses.lfuse = 0x7A
+board_fuses.hfuse = 0xFF
+
+;extended fuse is not defined for ATtiny13A
+;board_fuses.efuse = 0xF9
