--- a/tinyAVR/ATtiny13/platformio.ini
+++ b/tinyAVR/ATtiny13/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATtiny13A]
+[env:ATtiny13]
 board_build.f_cpu = 9600000L
 platform = atmelavr
-board = ATtiny13A
+board = ATtiny13
 upload_protocol = usbasp
-upload_flags = -e
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
 board_fuses.lfuse = 0x7A
