--- a/tinyAVR/ATtiny84/platformio.ini
+++ b/tinyAVR/ATtiny84/platformio.ini
@@ -8,14 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATtiny861]
-board_build.f_cpu = 8000000UL
+[env:ATtiny84]
+board_build.f_cpu = 8000000L
 platform = atmelavr
-board = ATtiny861
+board = ATtiny84
 upload_protocol = usbasp
-upload_flags = -e
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
 board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xDF
+board_fuses.hfuse = 0xFF
 board_fuses.efuse = 0xFF
