--- a/tinyAVR/ATtiny861/platformio.ini
+++ b/tinyAVR/ATtiny861/platformio.ini
@@ -8,12 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:ATtiny85]
-board_build.f_cpu = 8000000L
+[env:ATtiny861]
+board_build.f_cpu = 8000000UL
 platform = atmelavr
-board = attiny85
+board = ATtiny861
 upload_protocol = usbasp
-upload_flags = -e
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
 board_fuses.lfuse = 0xE2
