--- a/tinyAVR/ATtiny84/platformio.ini
+++ b/tinyAVR/ATtiny84/platformio.ini
@@ -16,5 +16,5 @@ upload_protocol = usbasp
 
 ;fuse settings: https://www.engbedded.com/fusecalc/
 board_fuses.lfuse = 0xE2
-board_fuses.hfuse = 0xFF
+board_fuses.hfuse = 0xDF
 board_fuses.efuse = 0xFF
