--- a/megaAVR/ATmega32/platformio.ini
+++ b/megaAVR/ATmega32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:ATmega32]
-board_build.f_cpu = 8000000UL
+board_build.f_cpu = 8000000L
 platform = atmelavr
 board = ATmega32
 upload_protocol = usbasp
