--- a/megaAVR/ATmega88-ATmega88A/platformio.ini
+++ b/megaAVR/ATmega88-ATmega88A/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:ATmega88-ATmega88A]
-board_build.f_cpu = 8000000UL
+board_build.f_cpu = 8000000L
 platform = atmelavr
 board = ATmega88
 upload_protocol = usbasp
