--- a/megaAVR/ATmega88PB/platformio.ini
+++ b/megaAVR/ATmega88PB/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:ATmega88PB]
-board_build.f_cpu = 8000000UL
+board_build.f_cpu = 8000000L
 platform = atmelavr
 board = ATmega88PB
 upload_protocol = usbasp
