--- a/tinyAVR/ATtiny861/platformio.ini
+++ b/tinyAVR/ATtiny861/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:ATtiny861]
-board_build.f_cpu = 8000000UL
+board_build.f_cpu = 8000000L
 platform = atmelavr
 board = ATtiny861
 upload_protocol = usbasp
